<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_likes">Likes</string>
    <string name="description_shares">Shares</string>
    <string name="description_views">Visibilities</string>
    <string name="description_save">Save</string>
    <string name="description_edit">Edit</string>
    <string name="description_cancel_edit">Cancel edit</string>
    <string name="edit_post"><b>Edit post</b></string>
    <string name="post_text">Post text</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="description_post_save">Save</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_new_posted">%1$s posted a new post</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts. If you create a new post, it will appear here</string>
    <string name="description_logo">Logo</string>
    <string name="load">Load</string>
    <string name="new_posts_available">%d new posts</string>
    <string name="new_posts_loaded">Load %d new posts</string>
    <string name="loading_new_posts">Load new posts…</string>
    <string name="new_posts_error">Error load new posts</string>
    <string name="load_new_posts">Load</string>
    <string name="show_new_posts">Show</string>
    <string name="retry">Retry</string>
    <string name="new_posts">New posts</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="menu_save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="fullscreen_image">Fullscreen image</string>
    <string name="close_fullscreen">Close fullscreen</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_out_confirmation">Are you sure?</string>
    <string name="user_name">Your name</string>
    <string name="user_password">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="error_login">Incorrect login or password</string>
    <string name="ok">Ok</string>
    <string name="ad">Advertisement</string>
</resources>