<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/barrier_bottom"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="10"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/card_post" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="content, add" />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/post_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLines="6"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_bottom" />

    <ImageButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_save"
        android:src="@drawable/ic_save_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/content"
        app:layout_constraintTop_toBottomOf="@id/barrier_bottom" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="onEdit" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="edit_message" />

    <LinearLayout
        android:id="@+id/edit_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/barrier_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrier_edit" />

    <ImageView
        android:id="@+id/edit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/description_edit"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/edited_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_message"
        app:srcCompat="@drawable/ic_edit_48" />

    <TextView
        android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/edit_post"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/edited_post"
        app:layout_constraintStart_toEndOf="@id/edit" />

    <TextView
        android:id="@+id/edited_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:paddingBottom="8dp"
        android:singleLine="true"
        android:text="@string/post_text"
        app:layout_constraintBottom_toBottomOf="@id/barrier_bottom"
        app:layout_constraintEnd_toStartOf="@+id/cancel_edit"
        app:layout_constraintStart_toEndOf="@id/edit" />

    <ImageButton
        android:id="@+id/cancel_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_cancel_edit"
        android:src="@drawable/ic_cancel_edit_48"
        app:layout_constraintBottom_toBottomOf="@id/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/edit_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="edit_background, edit, edit_message, edited_post, cancel_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>